# clinicforge

./: README.md  pyproject.toml
.aas/: aas-config.yaml  architecture-rules.yaml  domain-map.json  test-results.xml
.aas/history/2026-02-14T23-26-00Z/: architecture-status.json  dependency-graph.json  domain-summary.md  risk-analysis.md  violations.json
.aas/history/2026-02-14T23-32-30Z/: architecture-status.json  dependency-graph.json  domain-summary.md  risk-analysis.md  violations.json
.aas/history/2026-02-14T23-41-59Z/: architecture-status.json  dependency-graph.json  domain-summary.md  risk-analysis.md  violations.json
.aas/output/: architecture-status.json  dependency-graph.json  domain-summary.md  risk-analysis.md  violations.json
docs/: aggregates-streams-consistency.md  architecture.md  clinical-event-invariants-and-metadata.md  clinical-event-taxonomy.md  clinical-projections.md  command-gateway.md  command-model.md  conflict-model.md  event-processing-pipeline.md  offline-sync-protocol.md  query-gateway.md
src/clinicforge.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_aggregate_rehydration.py  test_architecture_boundaries.py  test_command_gateway.py  test_command_handler.py  test_confirm_diagnosis.py  test_end_to_end_clinical_flow.py  test_event_dispatcher.py  test_event_store_architecture.py  test_event_store_invariants.py  test_integration_confirm_diagnosis.py  test_integration_patient_summary_query.py  test_patient_summary_projection.py  test_projection_handler.py  test_query_gateway.py  test_sync_convergence.py  test_sync_engine.py
(+58 files in other folders)
